converted InfoLesson to an InfoLesson wrapper - all gets to infoLesson are delegated to Lesson - some infoLesson slots, like InfoShift, InfoSala, InfoRoomOccupation, are kept in the same way (they can be converted to wrappers in future refactorings)
organized some imports in project