@@ -1,12 +1,10 @@
-/*
- * CreateLesson.java
+/* 
  *
  * Created on 2003/08/12
  */
 package net.sourceforge.fenixedu.applicationTier.Servico.sop;
 
 /**
- * Servi�o CreateLesson.
  * 
  * @author Luis Cruz & Sara Ribeiro
  */
@@ -16,12 +14,10 @@ import java.util.List;
 import net.sourceforge.fenixedu.applicationTier.Service;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.InvalidTimeIntervalServiceException;
-import net.sourceforge.fenixedu.dataTransferObject.InfoLesson;
 import net.sourceforge.fenixedu.dataTransferObject.InfoLessonServiceResult;
 import net.sourceforge.fenixedu.dataTransferObject.InfoRoomOccupation;
 import net.sourceforge.fenixedu.dataTransferObject.InfoShift;
 import net.sourceforge.fenixedu.dataTransferObject.InfoShiftServiceResult;
-
 import net.sourceforge.fenixedu.domain.ExecutionPeriod;
 import net.sourceforge.fenixedu.domain.Lesson;
 import net.sourceforge.fenixedu.domain.OccupationPeriod;
@@ -29,53 +25,54 @@ import net.sourceforge.fenixedu.domain.Shift;
 import net.sourceforge.fenixedu.domain.ShiftType;
 import net.sourceforge.fenixedu.domain.space.OldRoom;
 import net.sourceforge.fenixedu.domain.space.RoomOccupation;
-import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
+import net.sourceforge.fenixedu.util.DiaSemana;
 
 public class CreateLesson extends Service {
 
-    public InfoLessonServiceResult run(InfoLesson infoLesson, InfoShift infoShift)
-            throws FenixServiceException, ExcepcaoPersistencia {
+    public InfoLessonServiceResult run(DiaSemana weekDay, Calendar begin, Calendar end, Integer frequency, 
+    		Integer weekOfQuinzenalStart, InfoRoomOccupation infoRoomOccupation, InfoShift infoShift)
+            throws FenixServiceException {
+    	
         final ExecutionPeriod executionPeriod = rootDomainObject.readExecutionPeriodByOID(
-                        infoLesson.getInfoShift().getInfoDisciplinaExecucao().getInfoExecutionPeriod()
-                                .getIdInternal());
+                        infoShift.getInfoDisciplinaExecucao().getInfoExecutionPeriod().getIdInternal());
 
         final Shift shift = rootDomainObject.readShiftByOID(infoShift.getIdInternal());
 
-        InfoLessonServiceResult result = validTimeInterval(infoLesson);
+        InfoLessonServiceResult result = validTimeInterval(begin, end);
         if (result.getMessageType() == 1) {
             throw new InvalidTimeIntervalServiceException();
         }
         
         boolean resultB = true;
-        if(infoLesson.getInfoRoomOccupation() != null) {
-             resultB = validNoInterceptingLesson(infoLesson.getInfoRoomOccupation());
+        if(infoRoomOccupation != null) {
+             resultB = validNoInterceptingLesson(infoRoomOccupation);
         }
         
         if (result.isSUCESS() && resultB) {
-                InfoShiftServiceResult infoShiftServiceResult = valid(shift, infoLesson);
+        	
+                InfoShiftServiceResult infoShiftServiceResult = valid(shift, begin, end);
                 if (infoShiftServiceResult.isSUCESS()) {
                     
                     RoomOccupation roomOccupation = null;
-                    if(infoLesson.getInfoRoomOccupation() != null) { 
+                    if(infoRoomOccupation != null) { 
                         roomOccupation = new RoomOccupation();
-                        roomOccupation.setDayOfWeek(infoLesson.getInfoRoomOccupation().getDayOfWeek());
-                        roomOccupation.setStartTime(infoLesson.getInfoRoomOccupation().getStartTime());
-                        roomOccupation.setEndTime(infoLesson.getInfoRoomOccupation().getEndTime());                       
+                        roomOccupation.setDayOfWeek(infoRoomOccupation.getDayOfWeek());
+                        roomOccupation.setStartTime(infoRoomOccupation.getStartTime());
+                        roomOccupation.setEndTime(infoRoomOccupation.getEndTime());                       
                     }
                    
                     OldRoom sala = null;
-                    if(infoLesson.getInfoSala() != null) {
-                        sala = OldRoom.findOldRoomByName(infoLesson.getInfoSala().getNome());                       
+                    if(infoRoomOccupation.getInfoRoom() != null) {
+                        sala = OldRoom.findOldRoomByName(infoRoomOccupation.getInfoRoom().getNome());                       
                     }
                     
                     if(roomOccupation != null) {
                         roomOccupation.setRoom(sala);                        
-                        final OccupationPeriod period = rootDomainObject.readOccupationPeriodByOID(infoLesson.getInfoRoomOccupation().getInfoPeriod().getIdInternal());
+                        final OccupationPeriod period = rootDomainObject.readOccupationPeriodByOID(infoRoomOccupation.getInfoPeriod().getIdInternal());
                         roomOccupation.setPeriod(period);
                     }
-                    Lesson aula2 = new Lesson(infoLesson.getDiaSemana(), infoLesson
-                            .getInicio(), infoLesson.getFim(), infoLesson.getTipo(), sala,
-                            roomOccupation, shift, infoLesson.getWeekOfQuinzenalStart(), infoLesson.getFrequency());
+                    Lesson aula2 = new Lesson(weekDay, begin, end, infoShift.getTipo(), sala,
+                            roomOccupation, shift, weekOfQuinzenalStart, frequency);
 
                     aula2.setExecutionPeriod(executionPeriod);
                 } else {
@@ -93,8 +90,7 @@ public class CreateLesson extends Service {
         return result;
     }
 
-    private boolean validNoInterceptingLesson(InfoRoomOccupation infoRoomOccupation)
-            throws FenixServiceException, ExcepcaoPersistencia {
+    private boolean validNoInterceptingLesson(InfoRoomOccupation infoRoomOccupation) {
         final OldRoom room = OldRoom.findOldRoomByName(infoRoomOccupation.getInfoRoom().getNome());
         final List<RoomOccupation> roomOccupations = room.getRoomOccupations();
 
@@ -113,20 +109,19 @@ public class CreateLesson extends Service {
         return true;
     }
 
-    private InfoLessonServiceResult validTimeInterval(InfoLesson infoLesson) {
+    private InfoLessonServiceResult validTimeInterval(Calendar begin, Calendar end) {
         InfoLessonServiceResult result = new InfoLessonServiceResult();
-        if (infoLesson.getInicio().getTime().getTime() >= infoLesson.getFim().getTime().getTime()) {
+        if (begin.getTime().getTime() >= end.getTime().getTime()) {
             result.setMessageType(InfoLessonServiceResult.INVALID_TIME_INTERVAL);
         }
         return result;
     }
 
-    private InfoShiftServiceResult valid(Shift shift, InfoLesson infoLesson)
-            throws ExcepcaoPersistencia {
+    private InfoShiftServiceResult valid(Shift shift, Calendar begin, Calendar end) {
         InfoShiftServiceResult result = new InfoShiftServiceResult();
         result.setMessageType(InfoShiftServiceResult.SUCCESS);
         double hours = getTotalHoursOfShiftType(shift);
-        double lessonDuration = (getLessonDurationInMinutes(infoLesson).doubleValue()) / 60;
+        double lessonDuration = (getLessonDurationInMinutes(begin, end).doubleValue()) / 60;
         
         if (shift.getTipo().equals(ShiftType.TEORICA)) {
             validForType(result, hours, lessonDuration, shift.getDisciplinaExecucao().getTheoreticalHours().doubleValue(), 
@@ -170,7 +165,7 @@ public class CreateLesson extends Service {
         }
     }
 
-    private double getTotalHoursOfShiftType(Shift shift) throws ExcepcaoPersistencia {
+    private double getTotalHoursOfShiftType(Shift shift) {
         Lesson lesson = null;
         double duration = 0;
         List associatedLessons = shift.getAssociatedLessons();
@@ -192,14 +187,12 @@ public class CreateLesson extends Service {
         return new Integer(duration);
     }
 
-    private Integer getLessonDurationInMinutes(InfoLesson infoLesson) {
-        int beginHour = infoLesson.getInicio().get(Calendar.HOUR_OF_DAY);
-        int beginMinutes = infoLesson.getInicio().get(Calendar.MINUTE);
-        int endHour = infoLesson.getFim().get(Calendar.HOUR_OF_DAY);
-        int endMinutes = infoLesson.getFim().get(Calendar.MINUTE);
-        int duration = 0;
-        duration = (endHour - beginHour) * 60 + (endMinutes - beginMinutes);
-        return new Integer(duration);
+    private Integer getLessonDurationInMinutes(Calendar begin, Calendar end) {
+        int beginHour = begin.get(Calendar.HOUR_OF_DAY);
+        int beginMinutes = begin.get(Calendar.MINUTE);
+        int endHour = end.get(Calendar.HOUR_OF_DAY);
+        int endMinutes = end.get(Calendar.MINUTE);
+        return Integer.valueOf((endHour - beginHour) * 60 + (endMinutes - beginMinutes));
     }
 
     public class InvalidLoadException extends FenixServiceException {
@@ -221,5 +214,4 @@ public class CreateLesson extends Service {
             super(s);
         }
     }
-
 }
